--- a/.gitignore
+++ b/.gitignore
@@ -364,3 +364,4 @@ FodyWeavers.xsd
 /.vs/EasyDapper/v17/.suo
 /EasyDapper/obj/Debug/net6.0/EasyDapper.assets.cache
 /.vs/EasyDapper/DesignTimeBuild/.dtbcache.v2
+/DapperHelper.ExampleTests/Hidden.cs
